tests/baselines/reference/breakNotInIterationOrSwitchStatement2.errors.txt
==== tests/cases/compiler/breakNotInIterationOrSwitchStatement2.ts (1 errors) ====
    while (true) {
      function f() {
        break;
        ~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
      }
    }